sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:11: error: not found: value i
    i=0;
    ^AlgCombSort:12: error: not found: value i
    while(i+ecart< getValueCount()){
          ^AlgCombSort:13: error: not found: value i
      if (isSmaller(i+ecart,i)){
                    ^AlgCombSort:13: error: not found: value i
      if (isSmaller(i+ecart,i)){
                            ^AlgCombSort:15: error: not found: value i
        swap(i,i+ecart);
             ^AlgCombSort:15: error: not found: value i
        swap(i,i+ecart);
               ^AlgCombSort:16: error: not found: value i
        i+=1;
        ^